[package]
name = "screenwars-pinocchio"
version = "0.1.0"
edition = "2021"

[dependencies]
pinocchio = "0.9.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"


[lib]
crate-type = ["lib", "cdylib"]

[dev-dependencies]
litesvm = "0.6.1"
solana-keypair = "2.2.1"
solana-pubkey = "2.2.1"
solana-signer = "2.2.1"
solana-instruction = "2.2.1"
solana-program = "2.2.1"
solana-kite = "0.1.0"
solana-clock = "2.2.1"

